# nes

./: .gitignore  CMakeLists.txt  README.md
include/: cpu.h
src/: cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  cpumemory.cpp  cpumemory.h  ines.cpp  main.cpp  memory.h
test/: cpu_instruction_arithmetic.cpp  cpu_instruction_jump_call.cpp  cpu_instruction_load_store.cpp  cpu_instruction_register_transfers.cpp  cpu_instruction_shifts.cpp  cpu_instruction_system.cpp  cpu_tests.cpp  cputests.h
